aside page article

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,8 @@
 }
 aside {
     width: 30%;
+    font-family: 'Nunito', sans-serif;
+    color: white;
 }
 
 .card-deck {
@@ -99,3 +101,12 @@ footer a {
 footer a:hover {
     color: white;
     }
+
+aside hr {
+    height: 1px;
+    background-color: white;
+    }
+
+.titreArticle {
+    margin-bottom: -6px;
+}
