--- a/css/styles.css
+++ b/css/styles.css
@@ -73,17 +73,11 @@ hr {
 }
 
 .card-text {
-    color: white;
-    text-shadow: 1px 1px black;
-}
+    color: black;}
 
 .card-img-overlay {
     height: 75%;
     margin: 0 auto 0 auto;
-}
-
-.card:hover .card-img-top {
-    filter: blur(5px);
 }
 
 .card:hover .textContainer {
