--- a/css/styles.css
+++ b/css/styles.css
@@ -32,9 +32,7 @@ aside {
     margin-top: 30px;
 }
 
-.filmsBoxOffice {
-    display: list-item;
-}
+
 
 .carousel-control-prev-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E")
@@ -136,4 +134,12 @@ aside hr {
 
 .bodyNews {
     background-color: #e6e6e6;
+}
+
+.textFooter {
+    color: #f6c900;
+}
+
+.carte {
+    border: 1px solid #f6c900
 }
