--- a/css/styles.css
+++ b/css/styles.css
@@ -22,22 +22,24 @@
     color: #FFFFFF;    
 }
 
-.navbar-dark .navbar-nav .nav-link:hover {
+.navbar-dark .navbar-nav .nav-link:hover  {
     color: #F6C900;
+}
+
+
+@media only screen and (min-width: 992px) {
+    .navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link {
+        margin:0 0.8em;
+    }
 }
 
 
 @media only screen and (min-width: 1300px) {
     .navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link {
-        font-size: 1.1rem;
+        margin:0 2em;
     }
 }
 
-@media only screen and (min-width: 1600px) {
-    .navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link {
-        font-size: 1.3rem;
-    }
-}
 
 
 .dropdown-item, .dropdown-menu {
@@ -279,10 +281,6 @@ footer a {
     text-align: center;
     }
 
-footer a:hover {
-    color: white;
-    }
-
 .menu-footer {
     font-weight: 500;
     font-size: 1.2rem;
@@ -350,12 +348,6 @@ footer .nav-link:hover {
     color: #f6c900;
 }
 
-.bouton-page-contact {
-    background-color: black;
-    color: #F6C900;
-    font-family: 'Nunito', sans-serif;
-}
-
 .form-control {
     border: 1px solid #F6C900;
 }
@@ -369,4 +361,3 @@ footer .nav-link:hover {
     margin-bottom: 5%;
     margin-left: 20%;
 }
-
